// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`yarn outdated --all should fallback to computed workspace name 1`] = `
"Checking for outdated dependencies
--- PROGRESS ---
--- SEPARATOR ---
Package     Current   Latest   Workspace       Package Type
package-b   1.1.1     1.3.0    computed-name   dependencies
--- SEPARATOR ---
"
`;

exports[`yarn outdated --all should include packages from all workspaces 1`] = `
"Checking for outdated dependencies
--- PROGRESS ---
--- SEPARATOR ---
Package     Current   Latest   Workspace               Package Type   
package-b   1.1.1     1.3.0    workspace-a             dependencies   
package-c   1.2.0     1.2.1    workspace-a             dependencies   
package-c   1.2.0     1.2.1    @my-scope/workspace-b   devDependencies
package-d   1.1.0     2.0.0    @my-scope/workspace-b   devDependencies
--- SEPARATOR ---
"
`;
